# DeChuang_Cockpit_IC

./: .gitignore  CMakeLists.txt  README.md
AutoSOCM/: CMakeLists.txt  README.md  autosocmConfig.cmake.in
AutoSOCM/config/: test.json  vsomeip.json
AutoSOCM/examples/: CMakeLists.txt  example_client.cpp  example_service.cpp
AutoSOCM/include/: application.hpp  client.hpp  data.hpp  service.hpp
AutoSOCM/src/: application_impl.cpp  application_impl.hpp  client_impl.cpp  client_impl.hpp  data.cpp  message.hpp  service_impl.cpp  service_impl.hpp
AutoSOCM/src/protocol/: application.cpp  application.hpp  common.hpp  endpoint.cpp  endpoint.hpp  message.hpp  runtime.cpp  runtime.hpp
AutoServices/: CMakeLists.txt  README.md
AutoServices/services/autodataservice/: CMakeLists.txt  auto_data_service_app.cpp
AutoServices/services/autodataservice/dataservices/: service_base.cpp  service_base.hpp  service_define.cpp  service_define.hpp
AutoServices/services/autodataservice/dataservices/domainservice/: domain_service.cpp  domain_service.hpp
AutoServices/services/autodataservice/dataservices/gaugeservice/: gauge_service.cpp  gauge_service.hpp
AutoServices/services/autodataservice/servicemanager/: service_manager.cpp  service_manager.hpp
AutoServices/services/autosoundservice/: CMakeLists.txt  auto_sound_service_app.cpp
AutoServices/services/autosoundservice/controller/: player_controller.cpp  player_controller.hpp
AutoServices/services/autosoundservice/include/: auto_sound_service.hpp
AutoServices/services/autosoundservice/player/: pcm.cpp  pcm.hpp  player_base.cpp  player_base.hpp  player_factory.cpp  player_factory.hpp  wav_player.cpp  wav_player.hpp
AutoServices/services/autosoundservice/resourcemanager/: resource_manager.cpp  resource_manager.hpp
AutoServices/services/autosoundservice/soundclient/: client_vsomeip.cpp  client_vsomeip.hpp
AutoServices/services/autosoundservice/soundmanager/: sound_manager.cpp  sound_manager.hpp
AutoServices/services/autosoundservice/soundservices/: service_base.cpp  service_base.hpp  service_define.cpp  service_define.hpp  sound_service.cpp  sound_service.hpp
AutoServices/services/autosoundservice/utils/: type_define.hpp
AutoServices/test/: CMakeLists.txt
AutoServices/test/autosoundservice/: CMakeLists.txt  test_client.cpp  test_player.cpp  test_resource_manager.cpp  test_sound_service.cpp
AutoServices/tools/socketcan/: can_matrix_protocol.hpp  socketcan_controller.cpp  socketcan_controller.hpp
HMI/: DechuangDemoqmake.pro  DechuangDemoqmake.qmlproject  DechuangDemoqmake.qmlproject.qtds  qml.qrc  qmlmodules  resource.qrc
HMI/content/: Adas.ui.qml  App.qml  BaseInfo.ui.qml  DIgitDisplay.qml  Gauge.ui.qml  MyMotPwrRate.qml  MyMotPwrRate_Leftprogress.qml  MyMotPwrRate_Rightprogress.qml  Screen01.ui.qml  ShaderEffects.qml  ShaderEffectsRight.qml  Telltale.ui.qml
HMI/src/: baseinfodatamodel.cpp  baseinfodatamodel.h  datamodel.h  gaugedatamodel.cpp  gaugedatamodel.h  main.cpp  telltaledatamodel.cpp  telltaledatamodel.h
HMI/src/win/: baseinfodatamodel.cpp  baseinfodatamodel.h  gaugedatamodel.cpp  gaugedatamodel.h  telltaledatamodel.cpp  telltaledatamodel.h
HMIControllers/: CMakeLists.txt  README.md
HMIControllers/inc/: sharedmemory.hpp
HMIControllers/src/: autologiccontroller.cpp
HMIControllers/src/modules/: autosocm_define.cpp  autosocm_define.hpp  module_define.cpp  module_define.h
HMIControllers/src/modules/domainmodule/: domain_logic_controller.cpp  domain_logic_controller.hpp
HMIControllers/src/modules/gaugemodule/: gauge_logic_controller.cpp  gauge_logic_controller.hpp
HMIControllers/src/sharedmemory/: sm_domain.cpp  sm_domain.hpp  sm_gauge.cpp  sm_gauge.hpp  sm_struct_define.h
Log/: CMakeLists.txt  README.md  base.cpp  base.hpp  console.cpp  log.cpp  log.hpp  project.config  syslog.cpp
systemd_service/: DechCluster.service  autodataservice.service  autologiccontroller.service
