cmake_minimum_required(VERSION 2.8)

PROJECT(autosocm)

SET(CMAKE_BUILD_TYPE Debug)

SET(AUTOSOCM_MAJOR_VERSION 1)
SET(AUTOSOCM_MINOR_VERSION 3)
SET(AUTOSOCM_VERSION ${AUTOSOCM_MAJOR_VERSION}.${AUTOSOCM_MINOR_VERSION})

SET(INSTALL_LIB_DIR lib CACHE PATH "Installation directory for libraries")
SET(INSTALL_BIN_DIR bin CACHE PATH "Installation directory for executables")
SET(INSTALL_INCLUDE_DIR include CACHE PATH "Installation directory for header files")

if (WIN32 AND NOT CYGWIN)
    set (DEF_INSTALL_CMAKE_DIR CMake)
else ()
    set (DEF_INSTALL_CMAKE_DIR lib/cmake/${PROJECT_NAME})
endif ()

SET(INSTALL_CMAKE_DIR ${DEF_INSTALL_CMAKE_DIR} CACHE PATH "Installation directory for CMake files")

SET(INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)

FIND_PACKAGE(vsomeip REQUIRED)

FIND_PACKAGE(Boost COMPONENTS serialization REQUIRED )

INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )
INCLUDE_DIRECTORIES(${INCLUDE_DIR})

FILE (GLOB_RECURSE AUTOSOCM_HEADERS ${CMAKE_CURRENT_SOURCE_DIR} "include/*.h*" )
FILE (GLOB_RECURSE AUTOSOCM_SOURCES ${CMAKE_CURRENT_SOURCE_DIR} "src/*.h*" "src/*.c*" )

SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DBOOST_ALL_DYN_LINK -std=c++14")

ADD_LIBRARY(${PROJECT_NAME} SHARED ${AUTOSOCM_HEADERS} ${AUTOSOCM_SOURCES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${VSOMEIP_LIBRARIES})

TARGET_COMPILE_DEFINITIONS(${PROJECT_NAME} PUBLIC SERVICE_DEBUG_LOG=1)
TARGET_COMPILE_DEFINITIONS(${PROJECT_NAME} PUBLIC CLIENT_DEBUG_LOG=1)

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES VERSION ${AUTOSOCM_VERSION})

# build examples
add_custom_target( examples )
add_subdirectory( examples EXCLUDE_FROM_ALL )

# INSTALL
foreach ( file ${AUTOSOCM_HEADERS} )
    install( FILES "${file}" DESTINATION "${INSTALL_INCLUDE_DIR}/autosocm" COMPONENT dev)
endforeach()

SET(TARGETS ${PROJECT_NAME}Targets)

install (
    TARGETS ${PROJECT_NAME}
    EXPORT ${TARGETS}
    LIBRARY DESTINATION "${INSTALL_LIB_DIR}" COMPONENT
    ARCHIVE DESTINATION "${INSTALL_LIB_DIR}"
    COMPONENT dev
)

EXPORT (TARGETS ${PROJECT_NAME} FILE ${CMAKE_BINARY_DIR}/${TARGETS}.cmake)

EXPORT (PACKAGE ${PROJECT_NAME})

CONFIGURE_FILE (autosocmConfig.cmake.in ${PROJECT_BINARY_DIR}/autosocmConfig.cmake @ONLY)

install (
    FILES
    "${PROJECT_BINARY_DIR}/autosocmConfig.cmake"
    DESTINATION "${INSTALL_CMAKE_DIR}"
    COMPONENT dev
)

install (
    EXPORT ${TARGETS}
    DESTINATION "${INSTALL_CMAKE_DIR}"
    COMPONENT dev
)

install (
    FILES
    "${CMAKE_CURRENT_SOURCE_DIR}/config/vsomeip.json"
    DESTINATION "etc"
    COMPONENT dev
)
